--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
+# IDE caches
 .idea
+.vscode
+.cache
+
+# Modules
+node_modules
+dist
+
+# IntelliJ Idea files
+.idea
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Yarn
+yarn-error.log
+.pnp/
+.pnp.js
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Certificates
+cert
+/public
